Add Description to Frontend

--- a/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
+++ b/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
@@ -13,6 +13,7 @@
         <label class="label" data-bind="attr: {'for': getCode()}" >
             <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="Netopia Payment>"/>
             <span data-bind="text: getTitle()"></span>
+            <p id="netCardDescription" data-bind="text: getDescription()"></p>
         </label>
     </div>
 
