--- a/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
+++ b/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
@@ -41,7 +41,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="paymentMethod" id="cardPayment" value="card" checked>
                     <label class="form-check-label" for="cardPayment">
-                        <!-- ko i18n: 'card payemnt'--><!-- /ko -->
+                        <!-- ko i18n: 'payment by bank card'--><!-- /ko -->
                     </label>
                 </div>
                 <div class="form-check" data-bind="visible: getQrCode()">
