--- a/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
@@ -2,8 +2,8 @@
     /* @var Netopia\Netcard\Block\Redirect $block */
     $quote = $block->getQuote();
     $formData = $block->getFormData();
-    $paymentUrl = ($block->getConfigData('debug') == 1) ? 'http://sandboxsecure.mobilpay.ro' : 'https://secure.mobilpay.ro';
-
+    $paymentUrl = ($block->getConfigData('api/is_live') == 1) ? 'https://secure.mobilpay.ro' : 'http://sandboxsecure.mobilpay.ro';
+      
     if($formData['status']) {
        ?>
         <div class="">
@@ -15,7 +15,6 @@
         <form method="post" id="mobilpay-form" action="<?php echo $paymentUrl ?>">
             <input type="hidden" name="data" value="<?php echo $formData['data'] ?>"/>
             <input type="hidden" name="env_key" id="env_key" value="<?php echo $formData['form_key'] ?>"/>
-            <!-- <button type="submit" class="button">SEND (Temporary - Test MODE)</button> -->
         </form>
 
         <script>
@@ -26,6 +25,13 @@
         echo '<div class="alert alert-danger" role="alert">
                 OOPS, something is wrong, you are not able to redirect into Payment page!
               </div>';
+              if(!is_null($formData['message'])) {
+                echo '
+                <div class="alert alert-danger" role="alert">
+                    <h5>'.$formData['message'].'</h5>
+                </div>
+                ';
+              }
     }
 
 ?>
