Reload cart on unpaid order

--- a/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
@@ -24,7 +24,7 @@
         <?php
     }else {
         echo '<div class="alert alert-danger" role="alert">
-                Something went wrong, please contact us!
+                OOPS, something is wrong, you are not able to redirect into Payment page!
               </div>';
     }
 
