--- a/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
@@ -24,7 +24,7 @@
         <?php
     }else {
         echo '<div class="alert alert-danger" role="alert">
-                OOPS, something is wrong, you are not able to redirect into Payment page!
+                A aparut o eroare, nu se poate face redirect catre pagina de plata
               </div>';
     }
 
