--- a/app/code/Netopia/Netcard/view/frontend/templates/guest.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/guest.phtml
@@ -4,16 +4,16 @@
     $orderData = $objectManager->create('Magento\Sales\Model\Order')->loadByIncrementId($block->getOrderId());
     switch ($orderData['status']) {
         case 'canceled':
-            $msg = "Sorry, Your order is canceled!";
+            $msg = "Plata a fost anulata";
             break;
         case 'complete':
-            $msg = "You are successfully paid!";
+            $msg = "Plata a fost finalizata cu succes";
             break;
         case 'payment_review':
-            $msg = "Your payment is in review!";
+            $msg = "Plata este in curs de procesare";
             break;
         case 'processing':
-            $msg = "Your order is in processing!";
+            $msg = "Plata este in curs de procesare";
             break;
         case 'fraud':
             $msg = "Your order will not be processed!";
@@ -83,10 +83,10 @@
     <!--/ko-->
     <div>
         <!-- ko if: isFormVisible -->
-        <p data-bind="i18n: 'You can track your order status by creating an account.'">You can track your order status by creating an account.</p>
-        <p><span data-bind="i18n: 'Email Address'">Email Address</span>: <span data-bind="text: getEmailAddress()"><?php echo $orderData->getData('customer_email');?></span></p>
+        <p data-bind="i18n: 'Poti urmari starea comenzii creandu-ti un cont.'">Poti urmari starea comenzii creandu-ti un cont.</p>
+        <p><span data-bind="i18n: 'adresa email'">Adresa email</span>: <span data-bind="text: getEmailAddress()"><?php echo $orderData->getData('customer_email');?></span></p>
         <a class="action primary" data-bind="attr: { href: getUrl() }" href="<?php /* @escapeNotVerified */ echo $block->getUrl() ?>checkout/account/delegateCreate/">
-            <span data-bind="i18n: 'Create an Account'">Create an Account</span>
+            <span data-bind="i18n: 'Creeaza-ti un cont'">Creeaza-ti un cont</span>
         </a>
         <!--/ko-->
     </div>
