--- a/app/code/Netopia/Netcard/view/frontend/templates/success.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/success.phtml
@@ -25,7 +25,7 @@
 
 ?>
 <div class="page-title-wrapper">
-    <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="Netopia Payment>"/>
+    <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="Netopia Payments"/>
     <h1 class="page-title">
         <span class="base" data-ui-id="page-title-wrapper"><?php echo $msg; ?></span>
     </h1>
