--- a/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
+++ b/app/code/Netopia/Netcard/view/frontend/web/template/payment/form.html
@@ -11,7 +11,7 @@
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
         <label class="label" data-bind="attr: {'for': getCode()}" >
-            <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="Netopia Payment>"/>
+            <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="NETOPIA Payments>"/>
             <span data-bind="text: getTitle()"></span>
             <p id="netCardDescription" data-bind="text: getDescription()"></p>
         </label>
