--- a/app/code/Netopia/Netcard/view/adminhtml/layout/default.xml
+++ b/app/code/Netopia/Netcard/view/adminhtml/layout/default.xml
@@ -2,5 +2,6 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <css src="Netopia_Netcard::styles.css"/>
+        <script type="text/javascript" src="Netopia_Netcard::script.js"></script>
     </head>
 </page>
