--- a/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
@@ -24,8 +24,9 @@
         <?php
     }else {
         echo '<div class="alert alert-danger" role="alert">
-                A aparut o eroare, nu se poate face redirect catre pagina de plata
+                A aparut o eroare, nu se poate face redirect catre pagina de plata!.
               </div>';
+        echo '<div>'.$formData['message'].'</div>';
     }
 
 ?>
