--- a/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/redirect.phtml
@@ -7,7 +7,7 @@
     if($formData['status']) {
        ?>
         <div class="">
-            <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="NETOPIA Payments>"/>
+            <img src="<?php echo $this->getViewFileUrl('Netopia_Netcard::NETOPIA_Payments.svg');?>" width="134" alt="NETOPIA Payments>"/>
             <h1 class="">
                 <span class="" >You will redirect to Netopia Website</span>
             </h1>
