--- a/app/code/Netopia/Netcard/view/frontend/templates/guest.phtml
+++ b/app/code/Netopia/Netcard/view/frontend/templates/guest.phtml
@@ -28,7 +28,7 @@
 
 ?>
 <div class="page-title-wrapper">
-    <img src="https://suport.mobilpay.ro/np-logo-blue.svg" width="134" alt="NETOPIA Payments>"/>
+    <img src="<?php echo $this->getViewFileUrl('Netopia_Netcard::NETOPIA_Payments.svg');?>" width="134" alt="NETOPIA Payments>"/>
     <h3>
         <span class=""><?=$block->escapeHtml(__('Dear')); ?> <?= $orderData->getData('customer_firstname');?></span>,
         <span class=""><?= $orderData->getData('customer_lastname');?></span>
